<resources>
    <string name="app_name">SqAN</string>
    <string name="channel_name">SqAN</string>
    <string name="settings">Settings</string>
    <string name="channel_description">SqAN Notifications</string>
    <string name="demo_only">Demonstration system for SOFWERX testing. It\'s not ready for operational use.</string>
    <string name="does_not_support_battery_optimization">This device does not support battery optimization.</string>
    <string name="enable_battery_optimization">Settings adjustment recommended</string>
    <string name="battery_optimizations_narrative">Can I turn off battery optimization for SqAN? This will allow for a more reliable mesh.</string>
    <string name="legal">Legal</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="licenses">Licenses</string>
    <string name="copyright">©2018 SOFWERX, all rights reserved</string>
    <string name="notify_foreground_title">SqAN is active</string>
    <string name="notify_foreground_details">SqAN is active</string>
    <string name="about_narrative">Squad Area Network (SqAN) is designed to provide an open source based mobile adhoc network (MANET) to a small dismounted maneuver unit or sensor network.</string>
    <string name="about_title">Squad Area Network (SqAN)</string>
    <string name="quit">Shutdown SqAN</string>
    <string name="quit_narrative">Do you want to shutdown SqAN and end all mesh connections?</string>
    <string name="quit_yes">Shutdown</string>
    <string name="quit_run_in_background">Run in background</string>
    <string name="battery_optimize_yes">Allow</string>
    <string name="turn_off">Shutdown</string>
    <string name="notify_status_title">SqAN %1$s</string>
    <string name="callsign">Callsign</string>
    <string name="commslog">Network Log</string>
    <string name="about_stats">Mesh status during this session:</string>
    <string name="up">Up</string>
    <string name="degraded">Degraded</string>
    <string name="down">Down</string>
    <string name="loc_services_needed_title">Location needs to be enabled</string>
    <string name="loc_services_needed_description">SqAN needs location services to be enabled to support some network techniques and to help SqAN make decisions about mesh structure.</string>
    <string name="loc_services_enable">Location Settings</string>
    <string name="shutdown_required">Shutdown required</string>
    <string name="prefs_manet_changed_description">Shutdown SqAN completely to finish changing to the MANET engine.</string>
    <string name="shutdown">Shutdown</string>
    <string name="forget_teammate">Forget this Device</string>
    <string name="forget_teammate_description">Forget this device? This cannot be undone and will require you to reconnect to the device before the device is able to join you on SqAN. You can also chose to just not link to this device.</string>
    <string name="forget">Forget Device</string>
    <string name="keep">Keep Device</string>
    <string name="bt_discovery_started">Bluetooth discovery started...</string>
    <string name="bt_discovery_ended">Bluetooth discovery finished.</string>
    <string name="bt_needed">Bluetooth must be enabled to use the bluetooth portion of SqAN.</string>
    <string name="bt_discovery_canx">Without Bluetooth discovery, SqAN cannot find new bluetooth capable teammates.</string>
    <string name="bt_start_discovery_on_other_devices">Do this on your other devices too</string>
    <string name="bt_start_discovery_on_other_devices_narrative">This device will listen for %1$s for new teammates. You now need to do what you just did here (open teammate settings and then press Fix) on any other device you want to save as a teammate.</string>
    <string name="disconnected">VPN Disconnected</string>
    <string name="connecting">VPN Connecting</string>
    <string name="connected">VPN Connected</string>
    <string name="prefs_vpn_changed_description">Shutdown SqAN completely to change the VPN status.</string>
    <string name="no_teammates_alert">No Teammates Setup</string>
    <string name="no_teammates_alert_narrative">You do not have any teammates configured. SqAN will not be able to communicate until you identify teammates.</string>
    <string name="set_teammates">Set Teammates</string>
    <string name="ignore">Ignore</string>
    <string name="never_ask">Never Ask Again</string>
    <string name="teammates_fix_alert">Incomplete Teammate Info</string>
    <string name="fix_teammates">Fix</string>
    <string name="no_link_device">Do Not Link</string>
    <string name="bt_discovery_problem_title">No New Teammates Found</string>
    <string name="bt_discovery_problem_narrative">SqAN didn\'t find any new teammates. It seems like this scan may not have worked at all.</string>
    <string name="bt_discovery_problem_narrative_reboot">SqAN didn\'t find any new teammates. This device hasn\'t been rebooted in %1$s and some devices have bluetooth discovery problems when they have not been recently rebooted. Try rebooting this device.</string>
</resources>
